--- a/Angular/parent-child/src/app/app.component.html
+++ b/Angular/parent-child/src/app/app.component.html
@@ -8,7 +8,8 @@
       <button class="btn btn-primary btn-space" (click)="greetChild('Good Morning')">Good Morning</button>
       <button class="btn btn-primary btn-space" (click)="greetChild('Good Noon')">Good Noon</button>
       <button class="btn btn-primary btn-space" (click)="greetChild('Good Evening')">Good Evening</button>
-
+      <hr/>
+      <h4>Child Greeting:  </h4>
     </div>
   </div>
 
