--- a/Angular/parent-child/src/app/greet/greet.component.html
+++ b/Angular/parent-child/src/app/greet/greet.component.html
@@ -5,6 +5,10 @@
       <hr/>
      
       <h3>{{greetingMessage}}</h3>
+      <div *ngIf="greetingMessage">
+        <button class="btn btn-success">Greet Back</button>
+
+      </div>
 
       <hr/>
       
